WRP-2724 fix for scrolling overflowing the tabs up top and removing vertical seperater between buttons

--- a/app/styles/edit.scss
+++ b/app/styles/edit.scss
@@ -7,6 +7,8 @@
 .m-t-7 {
 	margin-top:7px;
 }
+
+.tab-content > .active{margin-top:5px!important}
 .ta-editor p,
 .ta-editor p span,
 .ta-editor p strong {
